SERVER-34600 uassert if using getParameter to read uninitialized fCV